Fix layout issues and enhance sidebar functionality; improve hover effect on service cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    padding: 0;
     font-size: 16px;
     font-family: "Roboto", sans-serif;
 }
@@ -10,6 +11,8 @@ body{
 
 ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 a{
@@ -39,6 +42,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 10px;
 }
 
 .nav-list{
@@ -55,7 +59,8 @@ nav{
 .sidebar{
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
+    padding: 10px;
     height: 100vh;
     width: 100vw;
     z-index: 999;
@@ -213,6 +218,12 @@ h2{
     border-radius: 8px;
     box-shadow: 0px 0px 5px 0px #333;
 }
+
+.servicio-card:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+
 
 .servicio-img__container{
     width: 500px;
